log
Fri Mar 17 15:14:26 -03 2023: 
 tests:  1|6
total_score: 10/70
2300d69
Fri Mar 17 15:15:43 -03 2023: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
3a86623
Fri Mar 17 15:16:04 -03 2023: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
./exercises.c:28:9: error: incompatible pointer to integer conversion assigning to 'int' from 'int *'; dereference with * [-Werror,-Wint-conversion]
   *max = a;
        ^ ~
          *
./exercises.c:29:9: error: incompatible pointer to integer conversion assigning to 'int' from 'int *'; dereference with * [-Werror,-Wint-conversion]
   *min = a;
        ^ ~
          *
2 errors generated.
Compilation failed
6b6283b
Fri Mar 17 15:16:13 -03 2023: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
./exercises.c:28:13: error: expected expression
   *max = a[];
            ^
./exercises.c:29:13: error: expected expression
   *min = a[];
            ^
2 errors generated.
Compilation failed
89b2c97
